--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: My Portfolio
 author: "Stanford Kang'ethe"
 email: stanfordkangethe@outlook.com
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Welcome I am Stanford Kangethe, A data Analyst.
   I am motivated to learn new things in tech and enthusiastic in life.   
